// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all 1`] = `
Object {
  "css": Object {
    "& *": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`children 1`] = `
Object {
  "css": Object {
    "& > *": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`sibling 1`] = `
Object {
  "css": Object {
    "& + *": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`siblings 1`] = `
Object {
  "css": Object {
    "& ~ *": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`svg 1`] = `
Object {
  "css": Object {
    "& svg": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;
